jump buttons full click fix

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ img {
     text-decoration: none;
     font-family: helvetica neue;
     color: #fff;
-    font-size: 12px;
+    font-size: 14px;
 }
 .printer{
     width: 50px;
@@ -64,9 +64,10 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: helvetica;
+    font-family: helvetica neue;
     font-kerning: .5em;
     font-size: 3em;
+    font-weight: 400;
     height: 100%;
     grid-area: 2/1/3/2;
     text-shadow: 1px 1px 4px black;
@@ -80,8 +81,9 @@ img {
     justify-content: left;
     align-items: center;
     grid-area: 2/1/3/2;
-    font-family: helvetica;
+    font-family: helvetica neue;
     font-size: 1.5em;
+    font-weight: 300;
     height: 66%;
     background-color: #70A3AB;
     margin: 6% 15% 6% 0;
@@ -92,7 +94,8 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: helvetica;
+    font-family: helvetica neue;
+    font-weight: 400;
     font-size: 3em;
     height: 100%;
     grid-area: 3/1/4/2;
@@ -107,8 +110,9 @@ img {
     align-items: center;
     justify-content: left;
     grid-area: 3/1/4/2;
-    font-family: helvetica;
+    font-family: helvetica neue;
     font-size: 1.5em;
+    font-weight: 300;
     height: 66%;
     background-color: #70A3AB;
     margin: 6% 15% 6% 0;
@@ -119,9 +123,10 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: helvetica;
+    font-family: helvetica neue;
     grid-area: 4/1/5/2;
     font-size: 3em;
+    font-weight: 400;
     height: 100%;
     text-shadow: 1px 1px 4px black;
 }
@@ -135,8 +140,9 @@ img {
     align-items: center;
     justify-content: left;
     grid-area: 4/1/5/2;
-    font-family: Helvetica;
+    font-family: helvetica neue;
     font-size: 1.5em;
+    font-weight: 300;
     height: 66%;
     margin: 6% 15% 6% 0;
     border-radius: 5px;
@@ -166,7 +172,7 @@ img {
     text-align: center;
     justify-content: space-around;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: helvetica neue;
     padding-top: 10px;
     padding-bottom: 5px;
     background-color: #87c656;
@@ -258,7 +264,9 @@ input:checked {
     grid-column: 2/3;
     grid-row: 2/3;
     padding: 6px;
-    /* width: 100px; */
+    text-decoration: none;
+    text-align: center;
+    color: black;
     font-size: 1em;
     background: rgb(153, 194, 207);
     border: 1px solid black;
@@ -270,19 +278,23 @@ input:checked {
 #toChart a{
     text-decoration: none;
     color: black;
-    font-family: helvetica;
+    font-family: helvetica neue;
 }
 #toChart:hover{
     background-color: rgba(236, 236, 236)
 }
 #mapTobtn {
+    text-decoration: none;
+    text-align: center;
+    color: black;
     grid-column: 2/3;
     grid-row: 5/6;
     padding: 6px;
-    height: 35px;
+    height: 20px;
     width: 100px;
-    margin: 3% 0 0 70%;
+    margin: 10% 0 0 70%;
     font-size: 1em;
+    font-family: helvetica neue;
     border: 1px solid black;
     background: rgba(121, 197, 209, 0.8);
     border-radius: 5px;
@@ -293,7 +305,7 @@ input:checked {
 #mapTobtn a{
     text-decoration: none;
     color: black;
-    font-family: helvetica;
+    font-family: helvetica neue;
 }
 #mapTobtn:hover{
     background-color: rgba(236, 236, 236)
